# Tsubame4-Agent

./: .gitignore  AGENTS.md  IRI_CHECKLIST.md  PORTING.md  QUICKSTART.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: USER_GUIDE.md
plugins/tsubame/: .mcp.json
plugins/tsubame/.claude-plugin/: plugin.json
plugins/tsubame/.codex-plugin/: plugin.json
plugins/tsubame/skills/tsubame-configuring/: SKILL.md
plugins/tsubame/skills/tsubame-demo/: SKILL.md
plugins/tsubame/skills/tsubame-monitoring-jobs/: SKILL.md
plugins/tsubame/skills/tsubame-reference/: SKILL.md
plugins/tsubame/skills/tsubame-submitting-jobs/: SKILL.md
server/: pyproject.toml  run.sh
server/tests/: smoke.py
server/tsubame_mcp/: compute.py  config.py  docs_server.py  doctor.py  hpc_server.py  ingest.py  middleware.py  models.py
server/tsubame_mcp/data/: tsubame_config.json  tsubame_guide.md
server/tsubame_mcp/data/docs_index/: chunks.json
server/tsubame_mcp/rag/: embed.py  ingest.py  store.py
