[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tsubame-mcp"
version = "0.2.0"
description = "MCP servers for the Institute of Science Tokyo TSUBAME4.0 supercomputer: Grid Engine interaction and documentation search, built as a thin skin over hpc-agent-core."
requires-python = ">=3.10"
dependencies = [
    # Pinned to a compatible range: a future core release could change the
    # backend/config surface this plugin wires into. Current release: 0.4.2.
    "hpc-agent-core>=0.4,<0.5",
    "mcp",
]

[project.scripts]
tsubame-hpc-mcp = "tsubame_mcp.hpc_server:main"
tsubame-docs-mcp = "tsubame_mcp.docs_server:main"
tsubame-doctor = "tsubame_mcp.doctor:main"

[tool.setuptools.packages.find]
include = ["tsubame_mcp*"]

[tool.setuptools.package-data]
tsubame_mcp = [
    "data/*.json",
    "data/*.md",
    "data/docs_index/*",
]
